Work on refactoring